--- a/neolink-prerelease/Dockerfile.txt
+++ b/neolink-prerelease/Dockerfile.txt
@@ -1,4 +1,4 @@
-FROM quantumentangledandy/neolink:v0.6.3-rc.1
+FROM quantumentangledandy/neolink:v0.6.3.rc.1
 
 RUN apt-get update && \
     apt-get install -y \
