--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,4 @@
 # https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
-name: schilea Home Assistant neolink pre-release repository
+name: Home Assistant neolink pre-release repository
 url: 'https://github.com/schilea/hassos-neolink-prerelease'
 maintainer: schilea
